--- a/tags.html
+++ b/tags.html
@@ -33,7 +33,7 @@
 
     <h2>Block Elements</h2>
 
-    <table style="width: 100%">
+    <table>
       <tr>
         <th>Tag</th>
         <th>Name</th>
